--- a/templates/inventory/edit_phone.html
+++ b/templates/inventory/edit_phone.html
@@ -55,7 +55,7 @@
                                     {{ form.acquired_from }}
                                     <div id="selected-customer-info" class="small text-muted mt-1" style="display: none;"></div>
                                 </div>
-                                <a href="{% url 'add_customer' %}" class="btn btn-outline-success ms-2">Agregar cliente</a>
+                                <a href="{% url 'add_customer' %}?next={{ request.path }}" class="btn btn-outline-success ms-2" target="_blank">Agregar cliente</a>
                             </div>
                             {% if form.acquired_from.errors %}
                                 <div class="text-danger small">{{ form.acquired_from.errors }}</div>
