--- a/templates/inventory/inventory_list.html
+++ b/templates/inventory/inventory_list.html
@@ -90,7 +90,13 @@
                                     {% endif %}
                                 </td>
                                 <td><strong>${{ phone.price }}</strong></td>
-                                <td>{{ phone.added_by.get_full_name|default:phone.added_by.username }}</td>
+                                <td>
+                                    {% if phone.added_by %}
+                                        {{ phone.added_by.get_full_name|default:phone.added_by.username }}
+                                    {% else %}
+                                        <span class="text-muted">N/A</span>
+                                    {% endif %}
+                                </td>
                                 <td>{{ phone.created_at|date:"d/m/Y" }}</td>
                                 <td>
                                     <div class="btn-group btn-group-sm">
